--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "redux": "^3.6.0",
     "webpack": "^2.2.1"
   }
 }
