--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
     "redux-promise": "^0.5.3",
     "webpack": "^2.2.1"
   }
